--- a/collab_git.html
+++ b/collab_git.html
@@ -14,28 +14,31 @@
         <p>Đây là thiết lập cơ bản của dự án do Tom thực hiện.</p>
         <button id="actionButton">Nhấn vào tôi</button>
     </main>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 
     <section id="instructions">
         <h2>Hướng dẫn làm việc nhóm</h2>
         <p>Sinh viên làm việc nhóm 3 người</p>
         <h3>Bước 1: Tom - Thiết lập dự án</h3>
+        <img  src="../img/hai.jpg" alt="">
         <ul>
-            <li>Khởi tạo một kho Git mới</li>
+            <br><li>Khởi tạo một kho Git mới</li>
             <li>Sử dụng lại mã nguồn trang web này, lưu trữ dưới tên colab_git.html</li>
             <li>Tạo một nút ấn Press me! </li>
             <li>Đẩy kho lưu trữ lên GitHub (nhánh chính: <code>main</code>)</li>
-        </ul>
+        </ul><br>
 
         <h3>Bước 2: Jerry - Thêm giao diện</h3>
+        <img src="../img/3dfb30445d17ee49b706.jpg" alt="">
         <ul>
             <li>Clone kho lưu trữ</li>
             <li>Tạo một nhánh mới <code>feature_styles</code></li>
             <li>Chỉnh sửa <code>styles.css</code> để trang web này đẹp nhất có thể và commit thay đổi</li>
-            <li>Đẩy nhánh lên và tạo pull request vào <code>main</code></li>
+            <li>Đẩy nhánh lên và tạo pull request vào <code>main</code></li><br>
         </ul>
 
         <h3>Bước 3: Spike - Thêm tương tác</h3>
+        <img src="../img/Annotation 2025-04-08 094809.jpg" alt="">
         <ul>
             <li>Clone kho lưu trữ</li>
             <li>Tạo một nhánh mới <code>feature_scripts</code></li>
