--- a/collab_git.html
+++ b/collab_git.html
@@ -15,12 +15,11 @@
         <button id="actionButton">Nhấn vào tôi</button>
     </main>
     <script src="./script.js"></script>
-
     <section id="instructions">
         <h2>Hướng dẫn làm việc nhóm</h2>
         <p>Sinh viên làm việc nhóm 3 người</p>
         <h3>Bước 1: Tom - Thiết lập dự án</h3>
-        <img  src="../img/hai.jpg" alt="">
+        <img  src="./img/hai.jpg" alt="">
         <ul>
             <br><li>Khởi tạo một kho Git mới</li>
             <li>Sử dụng lại mã nguồn trang web này, lưu trữ dưới tên colab_git.html</li>
@@ -29,7 +28,7 @@
         </ul><br>
 
         <h3>Bước 2: Jerry - Thêm giao diện</h3>
-        <img src="../img/3dfb30445d17ee49b706.jpg" alt="">
+        <img src="./img/3dfb30445d17ee49b706.jpg" alt="">
         <ul>
             <li>Clone kho lưu trữ</li>
             <li>Tạo một nhánh mới <code>feature_styles</code></li>
@@ -38,7 +37,7 @@
         </ul>
 
         <h3>Bước 3: Spike - Thêm tương tác</h3>
-        <img src="../img/Annotation 2025-04-08 094809.jpg" alt="">
+        <img src="./img/Annotation 2025-04-08 094809.jpg" alt="">
         <ul>
             <li>Clone kho lưu trữ</li>
             <li>Tạo một nhánh mới <code>feature_scripts</code></li>
